--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,7 +29,7 @@ jobs:
         id: gitinfo
         run: |
           echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
-          echo "REVISION=$(git rev-list --count HEAD)" >> "$GITHUB_OUTPUT
+          echo "REVISION=$(git rev-list --count HEAD)" >> "$GITHUB_OUTPUT"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
