--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,18 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - platform: linux-amd64
+            runs-on: ubuntu-24.04
+          - platform: linux-arm64
+            runs-on: ubuntu-24.04-arm
+
+    runs-on: ${{ matrix.runs-on }}
+
+    outputs:
+      commit_hash: ${{ steps.gitinfo.outputs.COMMIT_HASH }}
 
     steps:
       - name: Checkout repository
@@ -17,9 +28,6 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -37,11 +45,28 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           file: ./cmd/kubeacme/Dockerfile
-          platforms: linux/amd64,linux/arm64
           build-args: |
             COMMIT_HASH=${{ steps.gitinfo.outputs.COMMIT_HASH }}
             REVISION=${{ steps.gitinfo.outputs.REVISION }}
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:latest
-          #cache-from: type=gha
-          #cache-to: type=gha,mode=max
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:${{ steps.gitinfo.outputs.COMMIT_HASH }}-${{ matrix.platform }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  manifest:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Create and push manifest
+        run: |
+          docker manifest create ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:latest \
+            --amend ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:${{ needs.build.outputs.commit_hash }}-linux-amd64 \
+            --amend ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:${{ needs.build.outputs.commit_hash }}-linux-arm64
+          docker manifest push ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:latest
