--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -59,9 +59,14 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Create and push manifest
+      - name: Create a multi-arch image
         run: |
           docker manifest create ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:latest \
             --amend ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:${{ needs.build.outputs.commit_hash }}-linux-amd64 \
             --amend ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:${{ needs.build.outputs.commit_hash }}-linux-arm64
           docker manifest push ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:latest
+
+      - name: Delete platform-specific images
+        run: |
+          docker rmi ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:${{ needs.build.outputs.commit_hash }}-linux-amd64
+          docker rmi ${{ vars.DOCKERHUB_USERNAME }}/kube-acme:${{ needs.build.outputs.commit_hash }}-linux-arm64
